--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: unless-stopped
     build: .
     command: bin/rails server -b 0.0.0.0
+    volumes:
+      - ./storage:/rails/storage
     ports:
       - "${EXPOSE_PORT}:3000"
     environment:
